maze.wallfindfollow.WallFindFollowMaze.scala.error
Erreur de compilation :
WallFindFollowMaze:22: error: not found: value estFacemur
  while (!estFacemur())
          ^